{
    "name": "InputAction",
    "maps": [
        {
            "name": "Player",
            "id": "bf3a8ff8-87bd-4779-9364-1b9fe9b311d6",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "06db28ee-08c2-47d4-9664-15d43a360276",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "KeyBoard",
                    "id": "e478f8cc-95bb-4fad-957b-f010b0c3e9a2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "95acef5d-a132-4a79-a522-1305272fa749",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6be29e86-b1ff-47b7-8d3a-9b6b37cff357",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0c08cd5d-1af3-40db-9e96-502143a066c8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "063bfb9e-4aa7-4717-9e94-f654fa4802cb",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}